# srvd

./: .hgignore  ABOUT  LICENSE  Makefile.am  autogen.sh  configure.ac
etc/: Makefile.am  srvd.conf.example
include/: Makefile.am
include/nssd/: buffer.h  client.h  conf.h  log.h  nssd.h  protocol.h  server.h  service.h  thread.h
include/nssd/client/: unsock.h
include/nssd/protocol/: packet.h  request.h  response.h  serial_packet.h
include/nssd/server/: unsock.h
include/nssd/service/: passwd.h
include/srvd/: buffer.h  client.h  conf.h  log.h  protocol.h  server.h  service.h  srvd.h  thread.h
include/srvd/client/: unsock.h
include/srvd/protocol/: packet.h  serial_packet.h
include/srvd/server/: unsock.h
include/srvd/service/nss/: aliases.h  passwd.h
lib/: Makefile.am
lib/nssd/: Makefile.am
lib/nssd/common/: Makefile.am  client.c
lib/nssd/common/client/: unsock.c
lib/nssd/common/protocol/: packet.c  request.c  response.c  serial_packet.c
lib/nssd/libnssd/: Makefile.am  client.c  conf.c  libnssd.pc.in  log.c  server.c  service.c
lib/nssd/libnssd/client/: unsock.c
lib/nssd/libnssd/protocol/: packet.c  request.c  response.c  serial_packet.c
lib/nssd/libnssd/server/: unsock.c
lib/nssd/libnssd/service/: passwd.c
lib/nssd/nss/: Makefile.am  nss.h  nssd.h  nssd_passwd.h  passwd.c  passwd.h
lib/srvd/: Makefile.am
lib/srvd/libsrvd/: Makefile.am  client.c  conf.c  libsrvd.pc.in  log.c  server.c  service.c
lib/srvd/libsrvd/client/: unsock.c
lib/srvd/libsrvd/protocol/: packet.c  serial_packet.c
lib/srvd/libsrvd/server/: unsock.c
lib/srvd/libsrvd/service/nss/: aliases.c  passwd.c
lib/srvd/nss/: Makefile.am  aliases.c  aliases.h  nss.h  passwd.c  passwd.h
lib/srvd/pam/: Makefile.am
test/: test-conf.c  test-conf.conf
