# Makefile.am: Automake instructions.
#
# This file is part of the nss-daemon NSS backend.
# Copyright (c) 2008-2009 Transtruct. All rights reserved.
#
# This file is released under the terms of the LICENSE document included with
# this distribution.

nobase_include_HEADERS = \
	nssd/nssd.h \
	nssd/buffer.h \
	nssd/protocol.h \
	nssd/protocol/packet.h \
	nssd/protocol/request.h \
	nssd/protocol/response.h \
	nssd/service/passwd.h
