# Makefile.am: Automake instructions.
#
# This file is part of srvd, a service daemon for POSIX-compliant systems.
# Copyright (c) 2008-2009 Transtruct. All rights reserved.
#
# This file is released under the terms of the LICENSE document included with
# this distribution.

nobase_include_HEADERS = \
	srvd/srvd.h \
	srvd/buffer.h \
	srvd/client.h \
	srvd/client/unsock.h \
	srvd/conf.h \
	srvd/log.h \
	srvd/protocol.h \
	srvd/protocol/packet.h \
	srvd/protocol/serial_packet.h \
	srvd/server.h \
	srvd/server/unsock.h \
	srvd/service.h \
	srvd/service/nss/aliases.h \
	srvd/service/nss/passwd.h \
	srvd/thread.h
